force-app/main/default/objects/TW1_Step__c/TW1_Step__c.object-meta.xml
<CustomObject>
    <label>Step</label>
    <nameField>
        <displayFormat>S{000000}</displayFormat>
        <label>Steps Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Steps</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>