force-app/main/default/objects/TW1_Step__c/fields/Atencao__c.field-meta.xml
<CustomField>
    <fullName>Atencao__c</fullName>
    <formula>&quot;Note: The ATTACHMENTS must be made available in the “New document” button BEFORE this window is saved.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warnning</label>
    <type>Text</type>
</CustomField>