force-app/main/default/objects/TW1_Step__c/fields/DescriptionResolution__c.field-meta.xml
<CustomField>
    <fullName>DescriptionResolution__c</fullName>
    <inlineHelpText>Description of actions to be taken or completed.</inlineHelpText>
    <label>Corrective Actions Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>