force-app/main/default/objects/TW1_Step__c/fields/DidYouAttachAllTheEvidence__c.field-meta.xml
<CustomField>
    <fullName>DidYouAttachAllTheEvidence__c</fullName>
    <label>Did you attach all the evidence?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>