force-app/main/default/objects/TW1_Step__c/fields/Email_do_Coord_PCMSO_Serv_de_Sa_de_Ocup__c.field-meta.xml
<CustomField>
    <fullName>Email_do_Coord_PCMSO_Serv_de_Sa_de_Ocup__c</fullName>
    <label>Email do Coord PCMSO/Serv de Saúde Ocup</label>
    <type>Email</type>
</CustomField>