force-app/main/default/objects/TW1_Step__c/fields/Evidence_Status__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Status__c</fullName>
    <label>Evidence Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Awaiting Evidence</fullName>
            </value>
            <value>
                <fullName>Deliver Evidence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>