force-app/main/default/objects/TW1_Step__c/fields/IncidentResponseModec__c.field-meta.xml
<CustomField>
    <fullName>IncidentResponseModec__c</fullName>
    <label>Incident - Response Modec</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncidentResponseModec</valueSetName>
    </valueSet>
</CustomField>