force-app/main/default/objects/TW1_Step__c/fields/Interaction_Details__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Details__c</fullName>
    <label>Interaction Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>