force-app/main/default/objects/TW1_Step__c/fields/Interaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Status__c</fullName>
    <label>Interaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Get Clarification</fullName>
            </value>
            <value>
                <fullName>Validated Notification</fullName>
            </value>
            <value>
                <fullName>Awaiting Clarification</fullName>
            </value>
            <value>
                <fullName>Under Evaluation</fullName>
            </value>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Propose New Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>