force-app/main/default/objects/TW1_Step__c/fields/Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Type__c</fullName>
    <label>Interaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Audit Planning / Technical Visit</fullName>
            </value>
            <value>
                <fullName>Announcements and Notices</fullName>
            </value>
            <value>
                <fullName>Extrajudicial Notice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>