force-app/main/default/objects/TW1_Step__c/fields/LastStepComments__c.field-meta.xml
<CustomField>
    <fullName>LastStepComments__c</fullName>
    <label>Last Step Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>