force-app/main/default/objects/TW1_Step__c/fields/ModecSupplierStepPortalLink__c.field-meta.xml
<CustomField>
    <fullName>ModecSupplierStepPortalLink__c</fullName>
    <formula>$Setup.ConfiguracoesGerais__c.URLPortalFornecedor__c + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ModecSupplierStepPortalLink</label>
    <type>Text</type>
</CustomField>