force-app/main/default/objects/TW1_Step__c/fields/ModecSupplierWarningSubject__c.field-meta.xml
<CustomField>
    <fullName>ModecSupplierWarningSubject__c</fullName>
    <formula>TCF_Warning__r.TCF_Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ModecSupplierWarningSubject</label>
    <type>Text</type>
</CustomField>