force-app/main/default/objects/TW1_Step__c/fields/Nome_do_Coord_PCMSO_Serv_de_Sa_de_Ocup__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Coord_PCMSO_Serv_de_Sa_de_Ocup__c</fullName>
    <label>Nome do Coord PCMSO/Serv de Saúde Ocup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>