force-app/main/default/objects/TW1_Step__c/fields/PreventiveActionsDescription__c.field-meta.xml
<CustomField>
    <fullName>PreventiveActionsDescription__c</fullName>
    <label>Preventive Actions Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>