force-app/main/default/objects/TW1_Step__c/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <label>SAP Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>