force-app/main/default/objects/TW1_Step__c/fields/Supplier_email__c.field-meta.xml
<CustomField>
    <fullName>Supplier_email__c</fullName>
    <label>Supplier email</label>
    <type>Email</type>
</CustomField>