force-app/main/default/objects/TW1_Step__c/fields/T_Reassignment_comments__c.field-meta.xml
<CustomField>
    <fullName>T_Reassignment_comments__c</fullName>
    <label>Reassignment comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>