force-app/main/default/objects/TW1_Step__c/fields/TCF_Accept__c.field-meta.xml
<CustomField>
    <fullName>TCF_Accept__c</fullName>
    <label>Accept</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>