force-app/main/default/objects/TW1_Step__c/fields/TCF_Automatic__c.field-meta.xml
<CustomField>
    <fullName>TCF_Automatic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic</label>
    <type>Checkbox</type>
</CustomField>