force-app/main/default/objects/TW1_Step__c/fields/TCF_DuvidaMonitoramento__c.field-meta.xml
<CustomField>
    <fullName>TCF_DuvidaMonitoramento__c</fullName>
    <label>Monitoring Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>