force-app/main/default/objects/TW1_Step__c/fields/TCF_HSEEvaluation__c.field-meta.xml
<CustomField>
    <fullName>TCF_HSEEvaluation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HSE Evaluation</label>
    <referenceTo>TOBJ_AvaliacaoHSE__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>TRN_Steps_HSEEvaluation</relationshipName>
    <type>Lookup</type>
</CustomField>