force-app/main/default/objects/TW1_Step__c/fields/TCF_HSEQ_Responsible__c.field-meta.xml
<CustomField>
    <fullName>TCF_HSEQ_Responsible__c</fullName>
    <label>HSEQ Responsible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>