force-app/main/default/objects/TW1_Step__c/fields/TCF_HSEQ_Responsible_Phone__c.field-meta.xml
<CustomField>
    <fullName>TCF_HSEQ_Responsible_Phone__c</fullName>
    <label>HSEQ Responsible Phone</label>
    <type>Phone</type>
</CustomField>