force-app/main/default/objects/TW1_Step__c/fields/TCF_LinkFornecedor__c.field-meta.xml
<CustomField>
    <fullName>TCF_LinkFornecedor__c</fullName>
    <formula>HYPERLINK( $Setup.ConfiguracoesGerais__c.URLPortalFornecedor__c + Id , $Setup.ConfiguracoesGerais__c.URLPortalFornecedor__c + Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link Fornecedor</label>
    <type>Text</type>
</CustomField>