force-app/main/default/objects/TW1_Step__c/fields/TCF_LinkMonitoring__c.field-meta.xml
<CustomField>
    <fullName>TCF_LinkMonitoring__c</fullName>
    <formula>HYPERLINK($Setup.ConfiguracoesGerais__c.TCF_URLSalesforce__c &amp; TCF_Monitoramento__r.Id, TCF_Monitoramento__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link Monitoring</label>
    <type>Text</type>
</CustomField>