force-app/main/default/objects/TW1_Step__c/fields/TCF_Monitoramento__c.field-meta.xml
<CustomField>
    <fullName>TCF_Monitoramento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monitoring</label>
    <referenceTo>TOBJ_Monitoramento__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>TRN_StepsMonitoramento</relationshipName>
    <type>Lookup</type>
</CustomField>