force-app/main/default/objects/TW1_Step__c/fields/TCF_Reason__c.field-meta.xml
<CustomField>
    <fullName>TCF_Reason__c</fullName>
    <label>Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>