force-app/main/default/objects/TW1_Step__c/fields/TCF_RespostaDuvidaMonitoramento__c.field-meta.xml
<CustomField>
    <fullName>TCF_RespostaDuvidaMonitoramento__c</fullName>
    <label>Response to the Monitoring Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>