force-app/main/default/objects/TW1_Step__c/fields/TCF_Type__c.field-meta.xml
<CustomField>
    <fullName>TCF_Type__c</fullName>
    <formula>CASE(RecordType.DeveloperName,
					&quot;TRT_MonitoringInvite&quot;, &quot;Monitoring Invite&quot;,
					&quot;TRT_MonitoringComplement&quot;, &quot;Monitoring Complement&quot;,
					&quot;Config TCF_Type__c&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>