force-app/main/default/objects/TW1_Step__c/fields/TCF_Warning__c.field-meta.xml
<CustomField>
    <fullName>TCF_Warning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warning</label>
    <referenceTo>TOBJ_Warning__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>TRN_StepsWarning</relationshipName>
    <type>Lookup</type>
</CustomField>