force-app/main/default/objects/TW1_Step__c/fields/Tel_do_Coord_PCMSO_Serv_de_Sa_de_Ocup__c.field-meta.xml
<CustomField>
    <fullName>Tel_do_Coord_PCMSO_Serv_de_Sa_de_Ocup__c</fullName>
    <label>Tel do Coord PCMSO/Serv de Saúde Ocup</label>
    <type>Phone</type>
</CustomField>