force-app/main/default/objects/TW1_Step__c/fields/TW1_Accumulated_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>TW1_Accumulated_Contract_Amount__c</fullName>
    <formula>TW1_Previous_Contract_Amount__c  + TW1_Current_Contract_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accumulated Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>