force-app/main/default/objects/TW1_Step__c/fields/TW1_Action_date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Action_date__c</fullName>
    <label>Action date</label>
    <type>Date</type>
</CustomField>