force-app/main/default/objects/TW1_Step__c/fields/TW1_Action_type__c.field-meta.xml
<CustomField>
    <fullName>TW1_Action_type__c</fullName>
    <label>Action type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preventive</fullName>
            </value>
            <value>
                <fullName>Corrective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>