force-app/main/default/objects/TW1_Step__c/fields/TW1_Agreement_term__c.field-meta.xml
<CustomField>
    <fullName>TW1_Agreement_term__c</fullName>
    <label>Agreement term</label>
    <type>Date</type>
</CustomField>