force-app/main/default/objects/TW1_Step__c/fields/TW1_Annual_Estimate__c.field-meta.xml
<CustomField>
    <fullName>TW1_Annual_Estimate__c</fullName>
    <label>Annual Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>