force-app/main/default/objects/TW1_Step__c/fields/TW1_Approval_Flow__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approval_Flow__c</fullName>
    <label>Approval Flow</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Procurement Manager</fullName>
            </value>
            <value>
                <fullName>Docs Validation (VV)</fullName>
            </value>
            <value>
                <fullName>HSEQ (EPCI or Operation)</fullName>
            </value>
            <value>
                <fullName>Finance - Step 1</fullName>
            </value>
            <value>
                <fullName>Reassignment finance Step 1</fullName>
            </value>
            <value>
                <fullName>Finance - Step 2</fullName>
            </value>
            <value>
                <fullName>Compliance - Step 1</fullName>
            </value>
            <value>
                <fullName>Reassignment compliance Step 1</fullName>
            </value>
            <value>
                <fullName>Compliance - Step 2</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Vetting Final Check</fullName>
            </value>
            <value>
                <fullName>GM SC, FIN, CON</fullName>
            </value>
            <value>
                <fullName>CEO (if Red Flag)</fullName>
            </value>
            <value>
                <fullName>Compliance Initial Validation</fullName>
            </value>
            <value>
                <fullName>VVW Attachment</fullName>
            </value>
            <value>
                <fullName>Enable Customer User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>