force-app/main/default/objects/TW1_Step__c/fields/TW1_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Inprogress</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Awaiting Supplier Clarification</fullName>
            </value>
            <value>
                <fullName>Awaiting Audit</fullName>
            </value>
            <value>
                <fullName>Under evaluation</fullName>
            </value>
            <value>
                <fullName>Reassign to level 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>