force-app/main/default/objects/TW1_Step__c/fields/TW1_Approver__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approver__c</fullName>
    <label>Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>