force-app/main/default/objects/TW1_Step__c/fields/TW1_Audit_Status__c.field-meta.xml
<CustomField>
    <fullName>TW1_Audit_Status__c</fullName>
    <label>Audit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successfully Approved</fullName>
            </value>
            <value>
                <fullName>Pending Audit</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Reproved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>