force-app/main/default/objects/TW1_Step__c/fields/TW1_Budgeted_2019__c.field-meta.xml
<CustomField>
    <fullName>TW1_Budgeted_2019__c</fullName>
    <label>Budgeted 2019</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>