force-app/main/default/objects/TW1_Step__c/fields/TW1_Cause_of_the_Problem__c.field-meta.xml
<CustomField>
    <fullName>TW1_Cause_of_the_Problem__c</fullName>
    <label>Cause of the Problem</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>