force-app/main/default/objects/TW1_Step__c/fields/TW1_Clarification__c.field-meta.xml
<CustomField>
    <fullName>TW1_Clarification__c</fullName>
    <label>Clarification</label>
    <type>TextArea</type>
</CustomField>