force-app/main/default/objects/TW1_Step__c/fields/TW1_Close_VV_Action__c.field-meta.xml
<CustomField>
    <fullName>TW1_Close_VV_Action__c</fullName>
    <label>Close VV Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>