force-app/main/default/objects/TW1_Step__c/fields/TW1_Compliance_Level__c.field-meta.xml
<CustomField>
    <fullName>TW1_Compliance_Level__c</fullName>
    <label>Compliance Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1 - Special Vendors</fullName>
                <label>Level 1 - Exceptional cases</label>
            </value>
            <value>
                <fullName>Level 2 - Not Qualified Vendors</fullName>
                <label>Level 2 - Usual products or services</label>
            </value>
            <value>
                <fullName>Level 3 - Vendors in direct contact with agencies involved in the name of MODEC</fullName>
                <label>Level 3 - Vendors that interact with Public Officials on MODEC’s behalf</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>