force-app/main/default/objects/TW1_Step__c/fields/TW1_Conditional_Approve__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conditional_Approve__c</fullName>
    <label>Conditional Approve</label>
    <type>TextArea</type>
</CustomField>