force-app/main/default/objects/TW1_Step__c/fields/TW1_Contract_Beginning_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contract_Beginning_Date__c</fullName>
    <label>Contract Beginning Date</label>
    <type>Date</type>
</CustomField>