force-app/main/default/objects/TW1_Step__c/fields/TW1_Contract_Comments__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contract_Comments__c</fullName>
    <label>Contract Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>