force-app/main/default/objects/TW1_Step__c/fields/TW1_Contract_Demand_Status__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contract_Demand_Status__c</fullName>
    <label>Contract Demand Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Waiting for Proposal</fullName>
            </value>
            <value>
                <fullName>Negociation</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>