force-app/main/default/objects/TW1_Step__c/fields/TW1_Contract_Justification__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contract_Justification__c</fullName>
    <label>Contract Justification</label>
    <type>TextArea</type>
</CustomField>