force-app/main/default/objects/TW1_Step__c/fields/TW1_Contract_Owner_Position__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contract_Owner_Position__c</fullName>
    <label>Contract Owner Position</label>
    <length>120</length>
    <type>Text</type>
</CustomField>