force-app/main/default/objects/TW1_Step__c/fields/TW1_Contractual_Termination_Conditions__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contractual_Termination_Conditions__c</fullName>
    <label>Contractual Termination Conditions</label>
    <type>TextArea</type>
</CustomField>