force-app/main/default/objects/TW1_Step__c/fields/TW1_Coord_de_PCMSO_Serv_de_Sa_de_Ocup__c.field-meta.xml
<CustomField>
    <fullName>TW1_Coord_de_PCMSO_Serv_de_Sa_de_Ocup__c</fullName>
    <label>Coord. de PCMSO/Serv. de Saúde Ocup.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Próprio</fullName>
            </value>
            <value>
                <fullName>Terceiro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>