force-app/main/default/objects/TW1_Step__c/fields/TW1_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>TW1_Cost_Center__c</fullName>
    <label>Cost Center</label>
    <length>20</length>
    <type>Text</type>
</CustomField>