force-app/main/default/objects/TW1_Step__c/fields/TW1_Current_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>TW1_Current_Contract_Value__c</fullName>
    <label>Current Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>