force-app/main/default/objects/TW1_Step__c/fields/TW1_Current_Inspection_Status__c.field-meta.xml
<CustomField>
    <fullName>TW1_Current_Inspection_Status__c</fullName>
    <formula>TEXT( TW1_Request__r.TW1_Inspection_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Inspection Status</label>
    <type>Text</type>
</CustomField>