force-app/main/default/objects/TW1_Step__c/fields/TW1_Current_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>TW1_Current_Project_Number__c</fullName>
    <formula>TW1_Request__r.TW1_Project_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Project Number</label>
    <type>Text</type>
</CustomField>