force-app/main/default/objects/TW1_Step__c/fields/TW1_Date_Availability_Note__c.field-meta.xml
<CustomField>
    <fullName>TW1_Date_Availability_Note__c</fullName>
    <label>Date Availability Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>