force-app/main/default/objects/TW1_Step__c/fields/TW1_Date_Confirmation_Note__c.field-meta.xml
<CustomField>
    <fullName>TW1_Date_Confirmation_Note__c</fullName>
    <label>Date Confirmation Note</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>