force-app/main/default/objects/TW1_Step__c/fields/TW1_Date_of_Contract_Expiration__c.field-meta.xml
<CustomField>
    <fullName>TW1_Date_of_Contract_Expiration__c</fullName>
    <label>Date of Contract Expiration</label>
    <type>Date</type>
</CustomField>