force-app/main/default/objects/TW1_Step__c/fields/TW1_Delivery_Base__c.field-meta.xml
<CustomField>
    <fullName>TW1_Delivery_Base__c</fullName>
    <formula>TW1_Request__r.TW1_Delivery_Base__r.Name +&quot; - &quot;+ TEXT(TW1_Request__r.TW1_Delivery_Base__r.TW1_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Base</label>
    <type>Text</type>
</CustomField>