force-app/main/default/objects/TW1_Step__c/fields/TW1_Document_Status__c.field-meta.xml
<CustomField>
    <fullName>TW1_Document_Status__c</fullName>
    <label>Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved Documents</fullName>
            </value>
            <value>
                <fullName>Get Clarification</fullName>
            </value>
            <value>
                <fullName>Rejected Documents</fullName>
            </value>
            <value>
                <fullName>Clarified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>