force-app/main/default/objects/TW1_Step__c/fields/TW1_Email__c.field-meta.xml
<CustomField>
    <fullName>TW1_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>